last minute stuff

--- a/langs/en-GB.json
+++ b/langs/en-GB.json
@@ -25,12 +25,13 @@
   "MESSAGE/YES": "Yes",
   "MESSAGE/NO": "No",
   "MESSAGE/HOME/CONFIRM_LOGOUT": "Are you sure you want to log out of Mega Hack?",
+  "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "Are you sure you want to load your Mega Hack v8 settings? This will overwrite your current configuration",
+  "MESSAGE/HOME/LOGOUT_SUCCESS": "Successfully logged out! You can use Mega Hack until you restart",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "Please exit the play-layer/editor before toggling fullscreen",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "You have unsaved changes in your macro, are you sure you want to clear and start fresh?",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "Are you sure you want to delete the selected macro?",
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "Successfully converted macro! Find it with your other macros",
   "MESSAGE/REPLAY/SAVE": "Do you want to save the changes to your macro?",
-  "MESSAGE/HOME/LOGOUT_SUCCESS": "Successfully logged out! You can use Mega Hack until you restart",
   "MESSAGE/KEYBINDS/EMPTY": "Please input a keybind first",
   "GM_VAR/0060": "Default Mini Icon",
   "GM_VAR/0061": "Switch Spider Dash",
@@ -43,6 +44,7 @@
   "HOME/ANIM_SPEED": "Animations (ms)",
   "HOME/ANIM_SPEED/PRE": "Animations",
   "HOME/ANIM_SPEED/SUF": "ms",
+  "HOME/CONTRIBUTE_TRANSLATIONS": "Contribute Translations",
   "HOME/DOT": "Indicator Dot",
   "HOME/DOT/TIP": "Adds an indicator dot to checkboxes in Mega Hack interfaces in-game (such as Iconic or Mobile)",
   "HOME/SHORTCUT/ALT": "Alt Hotkey",
@@ -300,7 +302,7 @@
   "LEVEL/HACK_PRACTICE_MUSIC/TIP": "Unlocks the practice music sync setting",
   "LEVEL/HACK_REPLAY_LAST_CHECKPOINT": "Replay Last Checkpoint",
   "LEVEL/HACK_REPLAY_LAST_CHECKPOINT/TIP": "Respawn from your last practice mode checkpoint after completing a level",
-  "LEVEL/SHOW_HITBOXES_ON_DEATH/HACK_SHOW_HITBOXES_ON_DEATH": "Show Hitboxes On Death",
+  "LEVEL/SHOW_HITBOXES_ON_DEATH/HACK_SHOW_HITBOXES_ON_DEATH": "Show Hitboxes on Death",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/HACK_SHOW_HITBOXES_ON_DEATH/TIP": "Visualises level hitboxes, only on death",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/NOCLIP": "Show with Noclip",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/DEATH_OBJ": "Show Death Object",
@@ -573,6 +575,8 @@
   "STATUS/*/MOVE/DOWN": "Down",
   "STATUS/*/MOVE/UP": "Up",
   "STATUS/*/UNITS": "Show units",
+  "STATUS/MESSAGE/ENABLED": "Message",
+  "STATUS/MESSAGE/DROPDOWN/MESSAGE": "Message",
   "STATUS/TESTMODE/ENABLED": "Testmode",
   "STATUS/CHEAT_INDICATOR/ENABLED": "Cheat Indicator",
   "STATUS/FPS/ENABLED": "FPS Counter",
