--- a/langs/es-CL.json
+++ b/langs/es-CL.json
@@ -25,12 +25,13 @@
   "MESSAGE/YES": "Si",
   "MESSAGE/NO": "No",
   "MESSAGE/HOME/CONFIRM_LOGOUT": "Estas seguro de cerrar sesion waton?",
+  "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "",
+  "MESSAGE/HOME/LOGOUT_SUCCESS": "Cerraste Sesion Exitosamente, sangre.",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "Pantalla completa detenida.",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "Tienes cambios no guardados en tu macro, estas seguro de borrarlos y empezar de cero?",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "Estas seguro waton de borrar la macro seleccionada?",
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "Macro convertida exitosamente! Encuentrala junto a tus otras macros",
   "MESSAGE/REPLAY/SAVE": "",
-  "MESSAGE/HOME/LOGOUT_SUCCESS": "Cerraste Sesion Exitosamente, sangre.",
   "MESSAGE/KEYBINDS/EMPTY": "Keybinds Vacias, wacho.",
   "GM_VAR/0060": "",
   "GM_VAR/0061": "",
@@ -43,6 +44,7 @@
   "HOME/ANIM_SPEED": "Velocidad de animacion.",
   "HOME/ANIM_SPEED/PRE": "Preajuste",
   "HOME/ANIM_SPEED/SUF": "Valor adicional wacho",
+  "HOME/CONTRIBUTE_TRANSLATIONS": "",
   "HOME/DOT": "",
   "HOME/DOT/TIP": "",
   "HOME/SHORTCUT/ALT": "Tecla de acceso rápido distinta",
@@ -573,6 +575,8 @@
   "STATUS/*/MOVE/DOWN": "Abajo",
   "STATUS/*/MOVE/UP": "Arriba",
   "STATUS/*/UNITS": "Mostrar unidades",
+  "STATUS/MESSAGE/ENABLED": "",
+  "STATUS/MESSAGE/DROPDOWN/MESSAGE": "",
   "STATUS/TESTMODE/ENABLED": "Modo de Prueba",
   "STATUS/CHEAT_INDICATOR/ENABLED": "Indicador de Trampas",
   "STATUS/FPS/ENABLED": "Contador de FPS",
