--- a/langs/es-ES.json
+++ b/langs/es-ES.json
@@ -25,12 +25,13 @@
   "MESSAGE/YES": "Sí",
   "MESSAGE/NO": "No",
   "MESSAGE/HOME/CONFIRM_LOGOUT": "¿Quieres cerrar la sesión del Mega Hack?",
+  "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "",
+  "MESSAGE/HOME/LOGOUT_SUCCESS": "¡Sesión cerrada! Puedes seguir usando el Mega Hack hasta que reinicies el juego",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "Por favor, hay que salir de la «play-layer» / del editor para poder cambiar el modo de pantalla completa",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "Tienes cambios sin guardar en tu macro, ¿quieres borrarlos y volver a empezar de cero?",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "¿Quieres borrar el macro seleccionado?",
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "¡Macro convertido correctamente! Encuéntralo junto a tus otros macros",
   "MESSAGE/REPLAY/SAVE": "¿Quieres guardar los cambios realizados en la macro?",
-  "MESSAGE/HOME/LOGOUT_SUCCESS": "¡Sesión cerrada! Puedes seguir usando el Mega Hack hasta que reinicies el juego",
   "MESSAGE/KEYBINDS/EMPTY": "Por favor, tienes que establecer primero un atajo de teclado",
   "GM_VAR/0060": "Mini-icono por defecto",
   "GM_VAR/0061": "Cambiar dash de araña",
@@ -43,6 +44,7 @@
   "HOME/ANIM_SPEED": "Animaciones (ms)",
   "HOME/ANIM_SPEED/PRE": "Animaciones",
   "HOME/ANIM_SPEED/SUF": "ms",
+  "HOME/CONTRIBUTE_TRANSLATIONS": "",
   "HOME/DOT": "Punto indicador",
   "HOME/DOT/TIP": "Añade un punto indicador a las interfaces del Mega Hack (tales como «Iconic» o en Móvil), para ver mejor los hacks activados ",
   "HOME/SHORTCUT/ALT": "Atajo Alt",
@@ -573,6 +575,8 @@
   "STATUS/*/MOVE/DOWN": "Abajo",
   "STATUS/*/MOVE/UP": "Arriba",
   "STATUS/*/UNITS": "Mostrar unidades",
+  "STATUS/MESSAGE/ENABLED": "",
+  "STATUS/MESSAGE/DROPDOWN/MESSAGE": "",
   "STATUS/TESTMODE/ENABLED": "Testmode",
   "STATUS/CHEAT_INDICATOR/ENABLED": "Indicador de trampas",
   "STATUS/FPS/ENABLED": "Contador de FPS",
