--- a/langs/eu-ES.json
+++ b/langs/eu-ES.json
@@ -25,12 +25,13 @@
   "MESSAGE/YES": "Bai",
   "MESSAGE/NO": "Ez",
   "MESSAGE/HOME/CONFIRM_LOGOUT": "Mega Hack saioa itxi nahi al duzu?",
+  "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "",
+  "MESSAGE/HOME/LOGOUT_SUCCESS": "Saioa itxita! Mega Hack erabiltzea jarraitu ahal duzu berrabiarazi arte",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "Mesedez, joku-geruzatik/editoretik irten behar duzu pantaila osoko modua aldatzeko",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "Zure makroan gorde gabeko aldaketak dituzu. Garbitzea eta berriro hastea ziur nahi al duzu?",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "Hautatutako makroa ezabatzeko ziur al zaude?",
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "Makroa arrakastaz bihurtuta! Zure beste makroekin aurkitu ahal duzu",
   "MESSAGE/REPLAY/SAVE": "Zure macro-an aldaketak gorde nahi duzu?",
-  "MESSAGE/HOME/LOGOUT_SUCCESS": "Saioa itxita! Mega Hack erabiltzea jarraitu ahal duzu berrabiarazi arte",
   "MESSAGE/KEYBINDS/EMPTY": "Mesedez, lehenik lasterbide bat sar ezazu",
   "GM_VAR/0060": "Defektuzko Ikono Txikia",
   "GM_VAR/0061": "Aldatu Spider-aren Dash",
@@ -43,6 +44,7 @@
   "HOME/ANIM_SPEED": "Animazioak (ms)",
   "HOME/ANIM_SPEED/PRE": "Animazioak",
   "HOME/ANIM_SPEED/SUF": "ms",
+  "HOME/CONTRIBUTE_TRANSLATIONS": "",
   "HOME/DOT": "Puntu Adierazlea",
   "HOME/DOT/TIP": "Mega Hack interfazeetan, puntu adierazle bat gehitzen du (hala nola Iconic edo Mugikorrean), zer aktibatuta dagoen argitzeko",
   "HOME/SHORTCUT/ALT": "Lasterbide Alternatiboa",
@@ -573,6 +575,8 @@
   "STATUS/*/MOVE/DOWN": "Behera",
   "STATUS/*/MOVE/UP": "Gora",
   "STATUS/*/UNITS": "Unitateak Erakutsi",
+  "STATUS/MESSAGE/ENABLED": "",
+  "STATUS/MESSAGE/DROPDOWN/MESSAGE": "",
   "STATUS/TESTMODE/ENABLED": "Testmode",
   "STATUS/CHEAT_INDICATOR/ENABLED": "Tranpa-Adierazlea",
   "STATUS/FPS/ENABLED": "FPS Kontadorea",
