--- a/langs/fr-FR.json
+++ b/langs/fr-FR.json
@@ -25,12 +25,13 @@
   "MESSAGE/YES": "Oui",
   "MESSAGE/NO": "Non",
   "MESSAGE/HOME/CONFIRM_LOGOUT": "Êtes-vous sûr de vouloir vous déconnecter de Mega Hack ?",
+  "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "",
+  "MESSAGE/HOME/LOGOUT_SUCCESS": "Déconnexion réussie ! Vous pouvez continuer à utiliser Mega Hack jusqu'au redémarrage",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "Veuillez quitter le mode jeu/éditeur avant d'activer/désactiver le plein écran",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "Vous avez des modifications non enregistrées dans votre macro. Êtes-vous sûr de vouloir tout effacer et recommencer ?",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "Êtes-vous sûr de vouloir supprimer la macro sélectionnée ?",
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "Macro convertie avec succès ! Vous pouvez la retrouver avec vos autres macros",
   "MESSAGE/REPLAY/SAVE": "Voulez-vous enregistrer les changements de la macro ?",
-  "MESSAGE/HOME/LOGOUT_SUCCESS": "Déconnexion réussie ! Vous pouvez continuer à utiliser Mega Hack jusqu'au redémarrage",
   "MESSAGE/KEYBINDS/EMPTY": "Veuillez saisir un raccourci d'abord",
   "GM_VAR/0060": "",
   "GM_VAR/0061": "",
@@ -43,6 +44,7 @@
   "HOME/ANIM_SPEED": "Animations (ms)",
   "HOME/ANIM_SPEED/PRE": "Animations",
   "HOME/ANIM_SPEED/SUF": "ms",
+  "HOME/CONTRIBUTE_TRANSLATIONS": "",
   "HOME/DOT": "Point indicateur",
   "HOME/DOT/TIP": "Ajoute un point indicateur aux interfaces Mega Hack en jeu (comme Iconic ou Mobile) pour clarifier l'état des cases à cocher.",
   "HOME/SHORTCUT/ALT": "",
@@ -573,6 +575,8 @@
   "STATUS/*/MOVE/DOWN": "Bas",
   "STATUS/*/MOVE/UP": "Haut",
   "STATUS/*/UNITS": "Afficher unités",
+  "STATUS/MESSAGE/ENABLED": "",
+  "STATUS/MESSAGE/DROPDOWN/MESSAGE": "",
   "STATUS/TESTMODE/ENABLED": "Mode Test",
   "STATUS/CHEAT_INDICATOR/ENABLED": "Indicateur de Triche",
   "STATUS/FPS/ENABLED": "Compteur IPS",
