--- a/langs/it-IT.json
+++ b/langs/it-IT.json
@@ -25,12 +25,13 @@
   "MESSAGE/YES": "Sì",
   "MESSAGE/NO": "No",
   "MESSAGE/HOME/CONFIRM_LOGOUT": "Si vuole eseguire il log out da Mega Hack?",
+  "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "",
+  "MESSAGE/HOME/LOGOUT_SUCCESS": "Log out eseguito con successo! Puoi usare Mega Hack fino al riavvio del gioco",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "Ci sono cambiamenti non salvati nella macro, procedere con lo svuotamento e creazione di una nuova?",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "Si vuole eliminare la macro selezionata?",
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "Macro convertita con successo! Trovala insieme alle altre",
   "MESSAGE/REPLAY/SAVE": "",
-  "MESSAGE/HOME/LOGOUT_SUCCESS": "Log out eseguito con successo! Puoi usare Mega Hack fino al riavvio del gioco",
   "MESSAGE/KEYBINDS/EMPTY": "Prima inserire un tasto",
   "GM_VAR/0060": "",
   "GM_VAR/0061": "",
@@ -43,6 +44,7 @@
   "HOME/ANIM_SPEED": "",
   "HOME/ANIM_SPEED/PRE": "",
   "HOME/ANIM_SPEED/SUF": "",
+  "HOME/CONTRIBUTE_TRANSLATIONS": "",
   "HOME/DOT": "",
   "HOME/DOT/TIP": "",
   "HOME/SHORTCUT/ALT": "",
@@ -573,6 +575,8 @@
   "STATUS/*/MOVE/DOWN": "Sotto",
   "STATUS/*/MOVE/UP": "Sopra",
   "STATUS/*/UNITS": "Mostra misure",
+  "STATUS/MESSAGE/ENABLED": "",
+  "STATUS/MESSAGE/DROPDOWN/MESSAGE": "",
   "STATUS/TESTMODE/ENABLED": "Testmode",
   "STATUS/CHEAT_INDICATOR/ENABLED": "Indicatore Trucchi",
   "STATUS/FPS/ENABLED": "Contatore FPS",
