--- a/langs/ko-KR.json
+++ b/langs/ko-KR.json
@@ -25,12 +25,13 @@
   "MESSAGE/YES": "네",
   "MESSAGE/NO": "아니요",
   "MESSAGE/HOME/CONFIRM_LOGOUT": "Mega Hack에서 로그아웃하시겠습니까?",
+  "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "",
+  "MESSAGE/HOME/LOGOUT_SUCCESS": "성공적으로 로그아웃되었습니다! 재시작하기 전까지 Mega Hack을 사용하실 수 있습니다.",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "전체 화면으로 전환하기 전에 플레이 레이어/에디터를 종료해 주세요.",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "매크로에 저장되지 않은 변경 사항이 있습니다. 지우고 새로 시작하시겠습니까?",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "선택한 매크로를 삭제하시겠습니까?",
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "매크로가 성공적으로 변환되었습니다. 다른 매크로와 함께 찾아보세요.",
   "MESSAGE/REPLAY/SAVE": "매크로의 변경 사항을 저장하시겠습니까?",
-  "MESSAGE/HOME/LOGOUT_SUCCESS": "성공적으로 로그아웃되었습니다! 재시작하기 전까지 Mega Hack을 사용하실 수 있습니다.",
   "MESSAGE/KEYBINDS/EMPTY": "먼저 키를 설정해 주세요.",
   "GM_VAR/0060": "기본 미니 아이콘",
   "GM_VAR/0061": "스파이더 대시 전환",
@@ -43,6 +44,7 @@
   "HOME/ANIM_SPEED": "애니메이션 (밀리초)",
   "HOME/ANIM_SPEED/PRE": "애니메이션",
   "HOME/ANIM_SPEED/SUF": "밀리초",
+  "HOME/CONTRIBUTE_TRANSLATIONS": "",
   "HOME/DOT": "표시 점",
   "HOME/DOT/TIP": "게임 내 Mega Hack 인터페이스(예: Iconic 또는 Mobile)에 체크박스 상태를 명확히 표시하기 위해 표시 점을 추가합니다.",
   "HOME/SHORTCUT/ALT": "Alt 단축키",
@@ -573,6 +575,8 @@
   "STATUS/*/MOVE/DOWN": "아래로",
   "STATUS/*/MOVE/UP": "위로",
   "STATUS/*/UNITS": "단위 표시",
+  "STATUS/MESSAGE/ENABLED": "",
+  "STATUS/MESSAGE/DROPDOWN/MESSAGE": "",
   "STATUS/TESTMODE/ENABLED": "테스트 모드",
   "STATUS/CHEAT_INDICATOR/ENABLED": "치트 표시기",
   "STATUS/FPS/ENABLED": "FPS 카운터",
