--- a/langs/pl-PL.json
+++ b/langs/pl-PL.json
@@ -25,12 +25,13 @@
   "MESSAGE/YES": "Tak",
   "MESSAGE/NO": "Nie",
   "MESSAGE/HOME/CONFIRM_LOGOUT": "Czy na pewno chcesz się wylogować z Mega Hack?",
+  "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "",
+  "MESSAGE/HOME/LOGOUT_SUCCESS": "Pomyślnie wylogowano! Możesz używać Mega Hack do momentu restartu",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "Wyjdź z play-layer/edytora przed zmianą trybu pełnoekranowego",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "Masz niezapisane zmiany w swoim makro, czy na pewno chcesz zacząć od początku?",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "Czy na pewno chcesz usunąć wybrane makro?",
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "Pomyślnie przekonwertowano makro! Znajdziesz je razem z innymi makrami",
   "MESSAGE/REPLAY/SAVE": "Czy chcesz zapisać zmiany w swoim makro?",
-  "MESSAGE/HOME/LOGOUT_SUCCESS": "Pomyślnie wylogowano! Możesz używać Mega Hack do momentu restartu",
   "MESSAGE/KEYBINDS/EMPTY": "Najpierw wprowadź skrót klawiszowy",
   "GM_VAR/0060": "",
   "GM_VAR/0061": "",
@@ -43,6 +44,7 @@
   "HOME/ANIM_SPEED": "Animacje (ms)",
   "HOME/ANIM_SPEED/PRE": "Animacje",
   "HOME/ANIM_SPEED/SUF": "ms",
+  "HOME/CONTRIBUTE_TRANSLATIONS": "",
   "HOME/DOT": "Znacznik Checkboxów",
   "HOME/DOT/TIP": "Dodaje kropkę do interfejsów Mega Hack w grze, aby łatwiej rozróżniać stan checkboxów",
   "HOME/SHORTCUT/ALT": "",
@@ -573,6 +575,8 @@
   "STATUS/*/MOVE/DOWN": "Dół",
   "STATUS/*/MOVE/UP": "Góra",
   "STATUS/*/UNITS": "Pokaż jednostki",
+  "STATUS/MESSAGE/ENABLED": "",
+  "STATUS/MESSAGE/DROPDOWN/MESSAGE": "",
   "STATUS/TESTMODE/ENABLED": "Testmode",
   "STATUS/CHEAT_INDICATOR/ENABLED": "Wzkaźnik Cheatów",
   "STATUS/FPS/ENABLED": "Licznik FPS",
