--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -25,12 +25,13 @@
   "MESSAGE/YES": "Да",
   "MESSAGE/NO": "Нет",
   "MESSAGE/HOME/CONFIRM_LOGOUT": "Вы уверены, что хотите выйти из аккаунта Mega Hack?",
+  "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "",
+  "MESSAGE/HOME/LOGOUT_SUCCESS": "Выход из аккаунта успешен! Вы можете использовать Mega Hack до перезахода в игру",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "Пожалуйста, вы должны выйти из редактора и уровня прежде чем включать полноэкранный режим",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "Ваш макрос содержит не сохраненные изменения, вы уверены, что хотите очистить его и начать заново?",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "Вы уверены, что хотите удалить выбранный макрос?",
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "Макрос успешно сконвертирован! Вы можете найти его рядом с вашими остальными макросами",
   "MESSAGE/REPLAY/SAVE": "",
-  "MESSAGE/HOME/LOGOUT_SUCCESS": "Выход из аккаунта успешен! Вы можете использовать Mega Hack до перезахода в игру",
   "MESSAGE/KEYBINDS/EMPTY": "Пожалуйста, сначала введите горячую клавишу",
   "GM_VAR/0060": "",
   "GM_VAR/0061": "",
@@ -43,6 +44,7 @@
   "HOME/ANIM_SPEED": "Анимации (мс)",
   "HOME/ANIM_SPEED/PRE": "Анимации",
   "HOME/ANIM_SPEED/SUF": "мс",
+  "HOME/CONTRIBUTE_TRANSLATIONS": "",
   "HOME/DOT": "",
   "HOME/DOT/TIP": "",
   "HOME/SHORTCUT/ALT": "Клавиша для открытия меню",
@@ -573,6 +575,8 @@
   "STATUS/*/MOVE/DOWN": "Вниз",
   "STATUS/*/MOVE/UP": "Вверх",
   "STATUS/*/UNITS": "Показывать единицы измерения",
+  "STATUS/MESSAGE/ENABLED": "",
+  "STATUS/MESSAGE/DROPDOWN/MESSAGE": "",
   "STATUS/TESTMODE/ENABLED": "Тестовый режим",
   "STATUS/CHEAT_INDICATOR/ENABLED": "Индикатор читов",
   "STATUS/FPS/ENABLED": "Счётчик кадров в секунду",
