--- a/langs/vi-VN.json
+++ b/langs/vi-VN.json
@@ -25,12 +25,13 @@
   "MESSAGE/YES": "Có",
   "MESSAGE/NO": "Không",
   "MESSAGE/HOME/CONFIRM_LOGOUT": "Bạn có chắc chắn muốn đăng xuất khỏi Mega Hack không?",
+  "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "",
+  "MESSAGE/HOME/LOGOUT_SUCCESS": "Đăng xuất thành công! Bạn có thể dùng Mega Hack cho đến khi khởi động lại game",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "",
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "",
   "MESSAGE/REPLAY/SAVE": "",
-  "MESSAGE/HOME/LOGOUT_SUCCESS": "Đăng xuất thành công! Bạn có thể dùng Mega Hack cho đến khi khởi động lại game",
   "MESSAGE/KEYBINDS/EMPTY": "",
   "GM_VAR/0060": "",
   "GM_VAR/0061": "",
@@ -43,6 +44,7 @@
   "HOME/ANIM_SPEED": "",
   "HOME/ANIM_SPEED/PRE": "",
   "HOME/ANIM_SPEED/SUF": "",
+  "HOME/CONTRIBUTE_TRANSLATIONS": "",
   "HOME/DOT": "",
   "HOME/DOT/TIP": "",
   "HOME/SHORTCUT/ALT": "",
@@ -573,6 +575,8 @@
   "STATUS/*/MOVE/DOWN": "",
   "STATUS/*/MOVE/UP": "",
   "STATUS/*/UNITS": "",
+  "STATUS/MESSAGE/ENABLED": "",
+  "STATUS/MESSAGE/DROPDOWN/MESSAGE": "",
   "STATUS/TESTMODE/ENABLED": "",
   "STATUS/CHEAT_INDICATOR/ENABLED": "",
   "STATUS/FPS/ENABLED": "FPS",
