--- a/langs/zh-CN.json
+++ b/langs/zh-CN.json
@@ -25,12 +25,13 @@
   "MESSAGE/YES": "是",
   "MESSAGE/NO": "否",
   "MESSAGE/HOME/CONFIRM_LOGOUT": "要退出Mega Hack吗？",
+  "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "",
+  "MESSAGE/HOME/LOGOUT_SUCCESS": "成功登出！重启前仍可使用 Mega Hack",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "请先退出游戏层/编辑器再切换全屏",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "macro中有未保存的更改，确定要清空并重新开始吗?",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "确定要删除所选marco吗?",
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "macro转换成功!可在其他宏中找到",
   "MESSAGE/REPLAY/SAVE": "是否要保存对宏的更改?",
-  "MESSAGE/HOME/LOGOUT_SUCCESS": "成功登出！重启前仍可使用 Mega Hack",
   "MESSAGE/KEYBINDS/EMPTY": "请先输入快捷键",
   "GM_VAR/0060": "",
   "GM_VAR/0061": "",
@@ -43,6 +44,7 @@
   "HOME/ANIM_SPEED": "动画速度 (ms)",
   "HOME/ANIM_SPEED/PRE": "动画",
   "HOME/ANIM_SPEED/SUF": "ms",
+  "HOME/CONTRIBUTE_TRANSLATIONS": "",
   "HOME/DOT": "指示点",
   "HOME/DOT/TIP": "在Mega Hack 界面(如Iconic或Mobile)添加指示点,以明确复选框状态",
   "HOME/SHORTCUT/ALT": "",
@@ -573,6 +575,8 @@
   "STATUS/*/MOVE/DOWN": "下移",
   "STATUS/*/MOVE/UP": "上移",
   "STATUS/*/UNITS": "显示单位",
+  "STATUS/MESSAGE/ENABLED": "",
+  "STATUS/MESSAGE/DROPDOWN/MESSAGE": "",
   "STATUS/TESTMODE/ENABLED": "Testmode",
   "STATUS/CHEAT_INDICATOR/ENABLED": "作弊指示器",
   "STATUS/FPS/ENABLED": "显示FPS",
