--- a/langs/hu-HU.json
+++ b/langs/hu-HU.json
@@ -25,12 +25,13 @@
   "MESSAGE/YES": "Igen",
   "MESSAGE/NO": "Nem",
   "MESSAGE/HOME/CONFIRM_LOGOUT": "",
+  "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "",
+  "MESSAGE/HOME/LOGOUT_SUCCESS": "",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "",
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "",
   "MESSAGE/REPLAY/SAVE": "",
-  "MESSAGE/HOME/LOGOUT_SUCCESS": "",
   "MESSAGE/KEYBINDS/EMPTY": "",
   "GM_VAR/0060": "",
   "GM_VAR/0061": "",
@@ -43,6 +44,7 @@
   "HOME/ANIM_SPEED": "",
   "HOME/ANIM_SPEED/PRE": "",
   "HOME/ANIM_SPEED/SUF": "",
+  "HOME/CONTRIBUTE_TRANSLATIONS": "",
   "HOME/DOT": "",
   "HOME/DOT/TIP": "",
   "HOME/SHORTCUT/ALT": "Alternatív gomb",
@@ -573,6 +575,8 @@
   "STATUS/*/MOVE/DOWN": "",
   "STATUS/*/MOVE/UP": "",
   "STATUS/*/UNITS": "",
+  "STATUS/MESSAGE/ENABLED": "",
+  "STATUS/MESSAGE/DROPDOWN/MESSAGE": "",
   "STATUS/TESTMODE/ENABLED": "Tesztmód",
   "STATUS/CHEAT_INDICATOR/ENABLED": "Csalásjelző",
   "STATUS/FPS/ENABLED": "FPS",
