--- a/langs/uk-UA.json
+++ b/langs/uk-UA.json
@@ -25,12 +25,13 @@
   "MESSAGE/YES": "Так",
   "MESSAGE/NO": "Ні",
   "MESSAGE/HOME/CONFIRM_LOGOUT": "Ви дійсно хочете вийти з акаунту Mega Hack?",
+  "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "",
+  "MESSAGE/HOME/LOGOUT_SUCCESS": "Ви успішно вийшли з акаунту Mega Hack! Ви можете користуватися ним до перезапуску гри",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "Будь ласка, вийдіть з рівня/редактора перед увімкненням повноекранного режиму",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "У вас є незбережені зміни у вашому макросі, ви дійсно хочете стерти і почати з нуля?",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "Ви дійсно хочете видалити цей макрос?",
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "Макрос успішно конвертовано! Ви можете знайти його разом з іншими макросами",
   "MESSAGE/REPLAY/SAVE": "Ви дійсно хочете зберегти зміни в цьому макросі?",
-  "MESSAGE/HOME/LOGOUT_SUCCESS": "Ви успішно вийшли з акаунту Mega Hack! Ви можете користуватися ним до перезапуску гри",
   "MESSAGE/KEYBINDS/EMPTY": "Будь ласка, спершу введіть гарячу клавішу",
   "GM_VAR/0060": "Стандартна міні-іконка",
   "GM_VAR/0061": "Змінити деш-ефект павука",
@@ -43,6 +44,7 @@
   "HOME/ANIM_SPEED": "Анімації (мс)",
   "HOME/ANIM_SPEED/PRE": "Анімації",
   "HOME/ANIM_SPEED/SUF": "мс",
+  "HOME/CONTRIBUTE_TRANSLATIONS": "",
   "HOME/DOT": "Крапка-індикатор",
   "HOME/DOT/TIP": "Додає індикатор у вигляді крапки у внутрішньоігрові інтерфейси Mega Hack (такі як Iconic та Mobile), аби визначити стан чекбоксів",
   "HOME/SHORTCUT/ALT": "Альт. гар. клавіша",
@@ -573,6 +575,8 @@
   "STATUS/*/MOVE/DOWN": "Вниз",
   "STATUS/*/MOVE/UP": "Вгору",
   "STATUS/*/UNITS": "Показ юнітів",
+  "STATUS/MESSAGE/ENABLED": "",
+  "STATUS/MESSAGE/DROPDOWN/MESSAGE": "",
   "STATUS/TESTMODE/ENABLED": "Тестовий режим",
   "STATUS/CHEAT_INDICATOR/ENABLED": "Індикатор читів",
   "STATUS/FPS/ENABLED": "Лічильник FPS",
