--- a/langs/ko-KR.json
+++ b/langs/ko-KR.json
@@ -25,7 +25,7 @@
   "MESSAGE/YES": "네",
   "MESSAGE/NO": "아니요",
   "MESSAGE/HOME/CONFIRM_LOGOUT": "Mega Hack에서 로그아웃하시겠습니까?",
-  "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "",
+  "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "Mega Hack 8 버전의 설정을 불러오시겠습니까? 현재 설정을 덮어씁니다.",
   "MESSAGE/HOME/LOGOUT_SUCCESS": "성공적으로 로그아웃되었습니다! 재시작하기 전까지 Mega Hack을 사용하실 수 있습니다.",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "전체 화면으로 전환하기 전에 플레이 레이어/에디터를 종료해 주세요.",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "매크로에 저장되지 않은 변경 사항이 있습니다. 지우고 새로 시작하시겠습니까?",
@@ -44,7 +44,7 @@
   "HOME/ANIM_SPEED": "애니메이션 (밀리초)",
   "HOME/ANIM_SPEED/PRE": "애니메이션",
   "HOME/ANIM_SPEED/SUF": "밀리초",
-  "HOME/CONTRIBUTE_TRANSLATIONS": "",
+  "HOME/CONTRIBUTE_TRANSLATIONS": "번역 기여",
   "HOME/DOT": "표시 점",
   "HOME/DOT/TIP": "게임 내 Mega Hack 인터페이스(예: Iconic 또는 Mobile)에 체크박스 상태를 명확히 표시하기 위해 표시 점을 추가합니다.",
   "HOME/SHORTCUT/ALT": "Alt 단축키",
@@ -175,8 +175,8 @@
   "COSMETIC/HACK_SOLID_WAVE_TRAIL/TIP": "흑백 트레일처럼 웨이브 트레일에 섞이지 않습니다.",
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA": "StartPos 카메라 초기화",
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "강제로 각 StartPos의 카메라를 재설정합니다.",
-  "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "사망 시 트리거 정지",
-  "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "사망 시 이동/회전 트리거를 정지하여 사망 원인을 확인할 수 있습니다.",
+  "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "사망 시 트리거 중지",
+  "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "사망 시 이동/회전 트리거를 중지하여 사망 원인을 확인할 수 있습니다.",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "트레일 커팅",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "트레일 커팅 버그를 다시 가져옵니다.",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "비율 (배)",
@@ -575,8 +575,8 @@
   "STATUS/*/MOVE/DOWN": "아래로",
   "STATUS/*/MOVE/UP": "위로",
   "STATUS/*/UNITS": "단위 표시",
-  "STATUS/MESSAGE/ENABLED": "",
-  "STATUS/MESSAGE/DROPDOWN/MESSAGE": "",
+  "STATUS/MESSAGE/ENABLED": "메시지",
+  "STATUS/MESSAGE/DROPDOWN/MESSAGE": "메시지",
   "STATUS/TESTMODE/ENABLED": "테스트 모드",
   "STATUS/CHEAT_INDICATOR/ENABLED": "치트 표시기",
   "STATUS/FPS/ENABLED": "FPS 카운터",
