--- a/langs/ko-KR.json
+++ b/langs/ko-KR.json
@@ -175,8 +175,8 @@
   "COSMETIC/HACK_SOLID_WAVE_TRAIL/TIP": "흑백 트레일처럼 웨이브 트레일에 섞이지 않습니다.",
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA": "StartPos 카메라 초기화",
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "강제로 각 StartPos의 카메라를 재설정합니다.",
-  "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "사망 시 트리거 중지",
-  "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "사망 시 이동/회전 트리거를 중지하여 사망 원인을 확인할 수 있습니다.",
+  "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "사망 시 트리거 정지",
+  "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "사망 시 이동/회전 트리거를 정지하여 사망 원인을 확인할 수 있습니다.",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "트레일 커팅",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "트레일 커팅 버그를 다시 가져옵니다.",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "비율 (배)",
