--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -2,11 +2,11 @@
   "NX/COLOUR/B": "Синий",
   "NX/COLOUR/DROPDOWN/INPUT": "HEX-Код цвета",
   "NX/COLOUR/G": "Зелёный",
-  "NX/COLOUR/H": "",
+  "NX/COLOUR/H": "Оттенок",
   "NX/COLOUR/INPUT": "HEX-Код цвета",
   "NX/COLOUR/R": "Красный",
-  "NX/COLOUR/S": "",
-  "NX/COLOUR/V": "",
+  "NX/COLOUR/S": "Насыщенность",
+  "NX/COLOUR/V": "Яркость",
   "NX/COLOUR/RESET": "Сбросить цвет",
   "NX/COMBO/EMPTY": "Пусто...",
   "NX/PICKER/EMPTY": "Файлы не найдены...",
@@ -18,66 +18,64 @@
   "ERROR/REPLAY/FILE_NOT_FOUND": "Файл не найден",
   "ERROR/REPLAY/NO_INPUTS": "Нынешний макрос не имеет действий, нет возможности продолжить",
   "ERROR/STATUS/MAX_FIELDS": "Больше нет доступных полей статуса, вы можете увидеть их в секции форматирования полей",
-  "ERROR/LEVEL/NO_CBF": "",
+  "ERROR/LEVEL/NO_CBF": "Пожалуйста, установите Click Between Frames от Syzzi в Geode",
   "MESSAGE": "Сообщение",
   "MESSAGE/OK": "ОК",
   "MESSAGE/CANCEL": "Отменить",
   "MESSAGE/YES": "Да",
   "MESSAGE/NO": "Нет",
   "MESSAGE/HOME/CONFIRM_LOGOUT": "Вы уверены, что хотите выйти из аккаунта Mega Hack?",
-  "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "",
-  "MESSAGE/HOME/LOGOUT_SUCCESS": "Выход из аккаунта успешен! Вы можете использовать Mega Hack до перезахода в игру",
-  "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "Пожалуйста, вы должны выйти из редактора и уровня прежде чем включать полноэкранный режим",
-  "MESSAGE/REPLAY/CONFIRM_CLEAR": "Ваш макрос содержит не сохраненные изменения, вы уверены, что хотите очистить его и начать заново?",
+  "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "Пожалуйста, вы должны выйти из редактора или уровня прежде чем включать полноэкранный режим",
+  "MESSAGE/REPLAY/CONFIRM_CLEAR": "Ваш макрос содержит несохраненные изменения, вы уверены, что хотите очистить его и начать заново?",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "Вы уверены, что хотите удалить выбранный макрос?",
-  "MESSAGE/REPLAY/CONVERT_SUCCESS": "Макрос успешно сконвертирован! Вы можете найти его рядом с вашими остальными макросами",
-  "MESSAGE/REPLAY/SAVE": "",
+  "MESSAGE/REPLAY/CONVERT_SUCCESS": "Макрос успешно сконвертирован! Вы можете найти его рядом с остальными макросами",
+  "MESSAGE/REPLAY/SAVE": "Вы хотите сохранить изменения макроса?",
+  "MESSAGE/HOME/LOGOUT_SUCCESS": "Выход из аккаунта успешен! Вы можете использовать Mega Hack до перезапуска игры",
   "MESSAGE/KEYBINDS/EMPTY": "Пожалуйста, сначала введите горячую клавишу",
-  "GM_VAR/0060": "",
-  "GM_VAR/0061": "",
-  "GM_VAR/0062": "",
-  "GM_VAR/0096": "",
+  "GM_VAR/0060": "Мини-иконка по умолчанию",
+  "GM_VAR/0061": "Переключить след паука",
+  "GM_VAR/0062": "Переключить огни деш орбов",
+  "GM_VAR/0096": "Переключить след волны",
   "HOME/LANGUAGE": "Язык",
   "HOME/SEARCH": "Поиск",
-  "HOME/RULESETS": "",
+  "HOME/RULESETS": "Правила",
   "HOME/RULESETS/SAFE_MODE": "Безопасный режим",
   "HOME/ANIM_SPEED": "Анимации (мс)",
   "HOME/ANIM_SPEED/PRE": "Анимации",
   "HOME/ANIM_SPEED/SUF": "мс",
-  "HOME/CONTRIBUTE_TRANSLATIONS": "",
-  "HOME/DOT": "",
-  "HOME/DOT/TIP": "",
-  "HOME/SHORTCUT/ALT": "Клавиша для открытия меню",
+  "HOME/DOT": "Индикатор точка",
+  "HOME/DOT/TIP": "Добавляет внутриигровой точку-индикатор в интерфейс Mega Hack (К примеру Iconic или Mobile)",
+  "HOME/SHORTCUT/ALT": "Горячая клавиша меню",
   "HOME/SHORTCUT/ICONIC": "Иконки",
-  "HOME/SORT_TABS": "Отсортировать интерфейс",
+  "HOME/SORT_TABS": "Сортировка интерфейса",
   "HOME/SCALE": "Размер интерфейса",
   "HOME/SCALE/PRE": "Размер интерфейса",
   "HOME/SCALE/SUF": "х",
   "HOME/THEME": "Тема",
-  "HOME/MISC": "",
+  "HOME/MISC": "Смешанное",
   "HOME/MISC/LICENSES": "Лицензии",
-  "HOME/MISC/LOAD_LANG": "",
-  "HOME/MISC/LOAD_LEGACY_SAVE": "",
+  "HOME/MISC/LOAD_LANG": "Загрузить язык",
+  "HOME/MISC/LOAD_LEGACY_SAVE": "Импортировать сохранение из 8 версии",
   "HOME/MISC/LOGOUT": "Выход из аккаунта",
   "KEYBINDS": "Горячие клавиши",
-  "KEYBINDS/SHORTCUT": "Выбрать горячую клавишу",
+  "KEYBINDS/SHORTCUT": "Выбрать клавишу",
   "KEYBINDS/SET": "Выберете мод для установки",
   "KEYBINDS/VIEW": "Посмотреть горячие клавиши",
   "KEYBINDS/REMOVE": "Удалить горячие клавиши",
-  "KEYBINDS/DISABLE_IN_EDITOR": "",
-  "KEYBINDS/DISABLE_IN_EDITOR/TIP": "",
+  "KEYBINDS/DISABLE_IN_EDITOR": "Отключить в редакторе",
+  "KEYBINDS/DISABLE_IN_EDITOR/TIP": "Отключает горячие клавиши Mega Hack внутри редактора уровней",
   "KEYBINDS/EMPTY": "Не выбрано",
   "BYPASS": "Обход",
   "BYPASS/HACK_MAIN_LEVELS": "Официальные уровни",
-  "BYPASS/HACK_MAIN_LEVELS/TIP": "Позволяет зайти в закрытые официальные уровни",
+  "BYPASS/HACK_MAIN_LEVELS/TIP": "Открывает доступ к основным уровням",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Настройка музыки",
-  "BYPASS/HACK_MUSIC_UNLOCKER/TIP": "Разрешает заменять музыку в практике и меню до покупки нужных предметов",
+  "BYPASS/HACK_MUSIC_UNLOCKER/TIP": "Позволяет настраивать музыку в практике и меню",
   "BYPASS/HACK_SLIDER_LIMIT": "Лимит ползунков",
-  "BYPASS/HACK_SLIDER_LIMIT/TIP": "Позволяет таскать ползунки за их визуальные лимиты",
+  "BYPASS/HACK_SLIDER_LIMIT/TIP": "Позволяет тянуть ползунки за видимые границы",
   "BYPASS/HACK_TEXT_LENGTH": "Длина текста",
-  "BYPASS/HACK_TEXT_LENGTH/TIP": "Позволяет вводить любое количество символов в полях ввода",
+  "BYPASS/HACK_TEXT_LENGTH/TIP": "Убирает ограничение длины текста в полях ввода",
   "BYPASS/HACK_TREASURE_ROOM": "Комната сокровищ",
-  "BYPASS/HACK_TREASURE_ROOM/TIP": "Открывает комнату с сундуками и магазинами",
+  "BYPASS/HACK_TREASURE_ROOM/TIP": "Открывает комнату сокровищ",
   "BYPASS/HACK_UNLOCK_ICONS": "Иконки",
   "BYPASS/HACK_UNLOCK_ICONS/TIP": "Открывает все иконки",
   "BYPASS/HACK_UNLOCK_SHOPS": "Магазины",
@@ -85,21 +83,21 @@
   "BYPASS/HACK_UNLOCK_VAULTS": "Хранилища",
   "BYPASS/HACK_UNLOCK_VAULTS/TIP": "Открывает все хранилища",
   "COSMETIC": "Косметика",
-  "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE": "",
-  "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE/TIP": "",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS": "",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/0": "",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/1": "",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/2": "",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE": "Аккуратные проценты",
+  "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE/TIP": "Позволяет настраивать точность процентов",
+  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS": "Аккуратные проценты",
+  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/0": "1 знака после запятой",
+  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/1": "2 знака после запятой",
+  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/2": "3 знака после запятой",
+  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "4 знака после запятой",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "Баг вращения",
-  "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "Воссоздает баг из 2.0 из-за которого переход из шара в другие режимы мог начинать эффект бочки",
+  "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "Воссоздаёт баг вращения из 2.0",
   "COSMETIC/HACK_CLASSIC_PARTICLES": "Классические частицы",
   "COSMETIC/HACK_CLASSIC_PARTICLES/TIP": "Возвращает частицы, которые следуют за игроком на мини режимах",
-  "COSMETIC/HACK_CLASSIC_PULSE": "",
-  "COSMETIC/HACK_CLASSIC_PULSE/TIP": "",
+  "COSMETIC/HACK_CLASSIC_PULSE": "Классические пульсации",
+  "COSMETIC/HACK_CLASSIC_PULSE/TIP": "Возвращает пульсации выше 60 Гц, как в pre-2.1",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "Классический след волны",
-  "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "Делает след волны как в 2.1",
+  "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "Реализует след волны из 2.1",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Скрыть кнопку паузы",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "Скрывает кнопку паузы когда включен показ курсора в игре",
   "COSMETIC/HACK_HIDE_PAUSE_MENU": "Скрыть меню паузы",
@@ -270,10 +268,10 @@
   "LEVEL/HACK_ALLOW_PAUSE_BUFFERING/TIP": "Отключает защиту, которая появляется при быстром включении и выключении паузы",
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD": "Автоматическое скачивание музыки",
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Автоматически скачивает музыку при открытии страницы уровня",
-  "LEVEL/HACK_AUTO_START_POS": "",
-  "LEVEL/HACK_AUTO_START_POS/TIP": "",
-  "LEVEL/HACK_CBF": "",
-  "LEVEL/HACK_CBF/TIP": "",
+  "LEVEL/HACK_AUTO_START_POS": "Автоматические точки возрождения",
+  "LEVEL/HACK_AUTO_START_POS/TIP": "Автоматически ставит точки возрождения внутри порталов",
+  "LEVEL/HACK_CBF": "Клики меж кадров",
+  "LEVEL/HACK_CBF/TIP": "Включает Click Between Frames от Syzzi (Должен быть установлен!)",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Без лимита чекпоинтов",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "Убирает лимит в 50 чекпоинтов",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Собирать монеты в практике",
@@ -294,8 +292,8 @@
   "LEVEL/HACK_INSTANT_COMPLETE/TIP": "Телепортирует в конец уровня",
   "LEVEL/HACK_JUMP_HACK": "Свободный прыжок",
   "LEVEL/HACK_JUMP_HACK/TIP": "Убирает лимит высоты прыжка игрока",
-  "LEVEL/HACK_PAUSE_DURING_COMPLETE": "",
-  "LEVEL/HACK_PAUSE_DURING_COMPLETE/TIP": "",
+  "LEVEL/HACK_PAUSE_DURING_COMPLETE": "Пауза во время прохождения",
+  "LEVEL/HACK_PAUSE_DURING_COMPLETE/TIP": "Позволяет ставить игру на паузу во время проигрывания анимации прохождения",
   "LEVEL/HACK_PRACTICE_BUG_FIX": "Починка бага практики",
   "LEVEL/HACK_PRACTICE_BUG_FIX/TIP": "Сохраняет и восстанавливает ускорение игрока после смерти в практике",
   "LEVEL/HACK_PRACTICE_MUSIC": "Музыка в практике",
@@ -395,9 +393,9 @@
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/R/PRE": "Вправо",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/ALLOW_RATED": "Разрешить в оцененных уровнях",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/DISABLE_IN_PRACTICE": "Отключить в режиме практике",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/INTERFACE_SIZE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/INTERFACE_SIZE/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/INTERFACE_SIZE/SUF": "",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/INTERFACE_SIZE": "Размер интерфейса",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/INTERFACE_SIZE/PRE": "Размер интерфейса",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/INTERFACE_SIZE/SUF": "х",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SWITCH_AFTER_DEATH": "Переключать после смерти",
   "LEVEL/STARTPOS_SWITCHER/HACK_STARTPOS_SWITCHER": "Переключение стартовой позиции",
   "LEVEL/STARTPOS_SWITCHER/HACK_STARTPOS_SWITCHER/TIP": "Позволяет переключаться между стартовыми позициями в уровне",
@@ -406,14 +404,14 @@
   "UNIVERSAL/CUSTOM_BG/HACK_CUSTOM_BG/TIP": "Позволяет настроить фон игры",
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME": "Разрешить низкий уровень громкости музыки",
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "Разрешает ставить значение гроскости музыки без ограничения / округления",
-  "UNIVERSAL/HACK_COMPACT_LISTS": "",
-  "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "",
+  "UNIVERSAL/HACK_COMPACT_LISTS": "Компактные листы",
+  "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "Уменьшает расстояние высоту уровней и комментариев в листах",
   "UNIVERSAL/HACK_AUTO_SAFE_MODE": "Автоматический безопасный режим",
   "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "Автоматически включает безопасный режим в случае, если включены читы",
   "UNIVERSAL/HACK_FAST_CHESTS": "Быстрые сундуки",
   "UNIVERSAL/HACK_FAST_CHESTS/TIP": "Ускоряет анимацию открытия сундуков",
-  "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "",
-  "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY/TIP": "",
+  "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "Грузить музыку в память",
+  "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY/TIP": "Загружает музыку в оперативную память вместо того, чтобы играть ее с SSD/HDD, может увеличить производитильность благодаря более быстрым загрузкам уровней",
   "UNIVERSAL/HACK_LOCK_CURSOR": "Заблокировать курсор",
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "Блокирует курсор внутри окна игры во время редактирования или игры в уровень",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Игра в главном меню",
@@ -575,8 +573,6 @@
   "STATUS/*/MOVE/DOWN": "Вниз",
   "STATUS/*/MOVE/UP": "Вверх",
   "STATUS/*/UNITS": "Показывать единицы измерения",
-  "STATUS/MESSAGE/ENABLED": "",
-  "STATUS/MESSAGE/DROPDOWN/MESSAGE": "",
   "STATUS/TESTMODE/ENABLED": "Тестовый режим",
   "STATUS/CHEAT_INDICATOR/ENABLED": "Индикатор читов",
   "STATUS/FPS/ENABLED": "Счётчик кадров в секунду",
@@ -610,5 +606,5 @@
   "REPLAY/GAMEPLAY": "Настройки воспроизведения",
   "REPLAY/GAMEPLAY/ALLOW_RANDOMNESS": "Разрешить случайность",
   "REPLAY/CONVERT": "Конвертировать (.json, .gdr)",
-  "REPLAY/NONE": ""
+  "REPLAY/NONE": "Нет выбранного макроса"
 }
