--- a/langs/uk-UA.json
+++ b/langs/uk-UA.json
@@ -25,7 +25,7 @@
   "MESSAGE/YES": "Так",
   "MESSAGE/NO": "Ні",
   "MESSAGE/HOME/CONFIRM_LOGOUT": "Ви дійсно хочете вийти з акаунту Mega Hack?",
-  "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "",
+  "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "Ви дійсно хочете імпортувати налаштування з Mega Hack v8? Ваші попередні налаштування буде повністю перезаписано",
   "MESSAGE/HOME/LOGOUT_SUCCESS": "Ви успішно вийшли з акаунту Mega Hack! Ви можете користуватися ним до перезапуску гри",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "Будь ласка, вийдіть з рівня/редактора перед увімкненням повноекранного режиму",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "У вас є незбережені зміни у вашому макросі, ви дійсно хочете стерти і почати з нуля?",
@@ -44,7 +44,7 @@
   "HOME/ANIM_SPEED": "Анімації (мс)",
   "HOME/ANIM_SPEED/PRE": "Анімації",
   "HOME/ANIM_SPEED/SUF": "мс",
-  "HOME/CONTRIBUTE_TRANSLATIONS": "",
+  "HOME/CONTRIBUTE_TRANSLATIONS": "Внести файл перекладу",
   "HOME/DOT": "Крапка-індикатор",
   "HOME/DOT/TIP": "Додає індикатор у вигляді крапки у внутрішньоігрові інтерфейси Mega Hack (такі як Iconic та Mobile), аби визначити стан чекбоксів",
   "HOME/SHORTCUT/ALT": "Альт. гар. клавіша",
@@ -575,8 +575,8 @@
   "STATUS/*/MOVE/DOWN": "Вниз",
   "STATUS/*/MOVE/UP": "Вгору",
   "STATUS/*/UNITS": "Показ юнітів",
-  "STATUS/MESSAGE/ENABLED": "",
-  "STATUS/MESSAGE/DROPDOWN/MESSAGE": "",
+  "STATUS/MESSAGE/ENABLED": "Повідомлення",
+  "STATUS/MESSAGE/DROPDOWN/MESSAGE": "Повідомлення",
   "STATUS/TESTMODE/ENABLED": "Тестовий режим",
   "STATUS/CHEAT_INDICATOR/ENABLED": "Індикатор читів",
   "STATUS/FPS/ENABLED": "Лічильник FPS",
