--- a/langs/es-ES.json
+++ b/langs/es-ES.json
@@ -25,7 +25,7 @@
   "MESSAGE/YES": "Sí",
   "MESSAGE/NO": "No",
   "MESSAGE/HOME/CONFIRM_LOGOUT": "¿Quieres cerrar la sesión del Mega Hack?",
-  "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "",
+  "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "¿Quieres cargar los ajustes que tenías en el Mega Hack v8? Esto sobrescribirá la configuración que actualmente tengas",
   "MESSAGE/HOME/LOGOUT_SUCCESS": "¡Sesión cerrada! Puedes seguir usando el Mega Hack hasta que reinicies el juego",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "Por favor, hay que salir de la «play-layer» / del editor para poder cambiar el modo de pantalla completa",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "Tienes cambios sin guardar en tu macro, ¿quieres borrarlos y volver a empezar de cero?",
@@ -44,7 +44,7 @@
   "HOME/ANIM_SPEED": "Animaciones (ms)",
   "HOME/ANIM_SPEED/PRE": "Animaciones",
   "HOME/ANIM_SPEED/SUF": "ms",
-  "HOME/CONTRIBUTE_TRANSLATIONS": "",
+  "HOME/CONTRIBUTE_TRANSLATIONS": "Contribuye traduciendo",
   "HOME/DOT": "Punto indicador",
   "HOME/DOT/TIP": "Añade un punto indicador a las interfaces del Mega Hack (tales como «Iconic» o en Móvil), para ver mejor los hacks activados ",
   "HOME/SHORTCUT/ALT": "Atajo Alt",
@@ -575,8 +575,8 @@
   "STATUS/*/MOVE/DOWN": "Abajo",
   "STATUS/*/MOVE/UP": "Arriba",
   "STATUS/*/UNITS": "Mostrar unidades",
-  "STATUS/MESSAGE/ENABLED": "",
-  "STATUS/MESSAGE/DROPDOWN/MESSAGE": "",
+  "STATUS/MESSAGE/ENABLED": "Mensaje",
+  "STATUS/MESSAGE/DROPDOWN/MESSAGE": "Mensaje",
   "STATUS/TESTMODE/ENABLED": "Testmode",
   "STATUS/CHEAT_INDICATOR/ENABLED": "Indicador de trampas",
   "STATUS/FPS/ENABLED": "Contador de FPS",
